@@ -1,18 +1,24 @@
 package com.ace.cache.service.impl;
 
+import java.util.Date;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
 import com.ace.cache.service.IRedisService;
-import lombok.extern.slf4j.Slf4j;
+import org.apache.log4j.Logger;
 import org.joda.time.DateTime;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import redis.clients.jedis.BinaryClient.LIST_POSITION;
+
 import redis.clients.jedis.Jedis;
 import redis.clients.jedis.JedisPool;
+import redis.clients.jedis.BinaryClient.LIST_POSITION;
 
-import java.util.*;
-@Slf4j
 @Service
 public class RedisServiceImpl implements IRedisService {
+    private static final Logger LOGGER = Logger.getLogger(RedisServiceImpl.class);
 
     @Autowired
     private JedisPool pool;
@@ -25,7 +31,7 @@ public class RedisServiceImpl implements IRedisService {
             jedis = pool.getResource();
             value = jedis.get(key);
         } catch (Exception e) {
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -40,7 +46,7 @@ public class RedisServiceImpl implements IRedisService {
             jedis = pool.getResource();
             value = jedis.keys(pre + "*");
         } catch (Exception e) {
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -54,7 +60,7 @@ public class RedisServiceImpl implements IRedisService {
             jedis = pool.getResource();
             return jedis.set(key, value);
         } catch (Exception e) {
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
             return "0";
         } finally {
             returnResource(pool, jedis);
@@ -71,7 +77,7 @@ public class RedisServiceImpl implements IRedisService {
             jedis.expire(key, time);
             return result;
         } catch (Exception e) {
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
             return "0";
         } finally {
             returnResource(pool, jedis);
@@ -90,9 +96,9 @@ public class RedisServiceImpl implements IRedisService {
                 String keyStr = it.next();
                 jedis.del(keyStr);
             }
-            return Long.valueOf(result);
+            return new Long(result);
         } catch (Exception e) {
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
             return 0L;
         } finally {
             returnResource(pool, jedis);
@@ -106,7 +112,7 @@ public class RedisServiceImpl implements IRedisService {
             jedis = pool.getResource();
             return jedis.del(keys);
         } catch (Exception e) {
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
             return 0L;
         } finally {
             returnResource(pool, jedis);
@@ -122,7 +128,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.append(key, str);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
             return 0L;
         } finally {
             returnResource(pool, jedis);
@@ -138,7 +144,7 @@ public class RedisServiceImpl implements IRedisService {
             return jedis.exists(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
             return false;
         } finally {
             returnResource(pool, jedis);
@@ -153,7 +159,7 @@ public class RedisServiceImpl implements IRedisService {
             return jedis.setnx(key, value);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
             return 0L;
         } finally {
             returnResource(pool, jedis);
@@ -169,7 +175,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.setex(key, seconds, value);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -184,7 +190,7 @@ public class RedisServiceImpl implements IRedisService {
             return jedis.setrange(key, offset, str);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
             return 0L;
         } finally {
             returnResource(pool, jedis);
@@ -200,7 +206,7 @@ public class RedisServiceImpl implements IRedisService {
             values = jedis.mget(keys);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -216,7 +222,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.mset(keysvalues);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -232,7 +238,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.msetnx(keysvalues);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -248,7 +254,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.getSet(key, value);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -264,7 +270,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.getrange(key, startOffset, endOffset);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -280,7 +286,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.incr(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -296,7 +302,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.incrBy(key, integer);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -313,7 +319,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.decr(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -330,7 +336,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.decrBy(key, integer);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -347,7 +353,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.strlen(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -364,7 +370,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hset(key, field, value);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -381,7 +387,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hsetnx(key, field, value);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -398,7 +404,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hmset(key, hash);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -415,7 +421,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hget(key, field);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -432,7 +438,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hmget(key, fields);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -449,7 +455,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hincrBy(key, field, value);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -466,7 +472,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hexists(key, field);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -483,7 +489,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hlen(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -501,7 +507,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hdel(key, fields);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -518,7 +524,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hkeys(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -535,7 +541,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.hvals(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -568,7 +574,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.lpush(key, strs);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -585,7 +591,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.rpush(key, strs);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -602,7 +608,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.linsert(key, where, pivot, value);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -619,7 +625,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.lset(key, index, value);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -636,7 +642,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.lrem(key, count, value);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -653,7 +659,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.ltrim(key, start, end);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -670,7 +676,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.lpop(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -687,7 +693,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.rpop(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -704,7 +710,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.rpoplpush(srckey, dstkey);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -721,7 +727,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.lindex(key, index);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -738,7 +744,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.llen(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -755,7 +761,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.lrange(key, start, end);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -772,7 +778,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sadd(key, members);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -789,7 +795,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.srem(key, members);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -806,7 +812,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.spop(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -823,7 +829,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sdiff(keys);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -840,7 +846,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sdiffstore(dstkey, keys);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -857,7 +863,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sinter(keys);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -874,7 +880,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sinterstore(dstkey, keys);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -891,7 +897,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sunion(keys);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -908,7 +914,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sunionstore(dstkey, keys);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -925,7 +931,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.smove(srckey, dstkey, member);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -942,7 +948,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.scard(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -959,7 +965,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.sismember(key, member);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -976,7 +982,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.srandmember(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -993,7 +999,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.smembers(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1009,7 +1015,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zadd(key, score, member);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1025,7 +1031,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zrem(key, members);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1042,7 +1048,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zincrby(key, score, member);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1059,7 +1065,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zrank(key, member);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1076,7 +1082,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zrevrank(key, member);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1093,7 +1099,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zrevrange(key, start, end);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1110,7 +1116,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zrevrangeByScore(key, max, min);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1127,7 +1133,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zrevrangeByScore(key, max, min);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1144,7 +1150,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zcount(key, min, max);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1161,7 +1167,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zcard(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1178,7 +1184,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zscore(key, member);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1195,7 +1201,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zremrangeByRank(key, start, end);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1212,7 +1218,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.zremrangeByScore(key, start, end);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1229,7 +1235,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.keys(pattern);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1245,7 +1251,7 @@ public class RedisServiceImpl implements IRedisService {
             res = jedis.type(key);
         } catch (Exception e) {
 
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
@@ -1272,7 +1278,7 @@ public class RedisServiceImpl implements IRedisService {
             jedis = pool.getResource();
             res = new DateTime().plusSeconds(jedis.ttl(key).intValue()).toDate();
         } catch (Exception e) {
-            log.error(e.getMessage());
+            LOGGER.error(e.getMessage());
         } finally {
             returnResource(pool, jedis);
         }
